bugfix(conjugation.scss): fixing the bug for imperativ on mobile devices.
v0.2.3: Adds a possibility to share/copy HTML markup for storybook UI.

--- a/assets/conjugation.scss
+++ b/assets/conjugation.scss
@@ -228,6 +228,16 @@
   .konjugation {
     &.independent-groups {
       &.imperativ {
+        .accordion-tables_group {
+          &:first-child {
+            .accordion-table {
+              &:last-child {
+                margin-bottom: 0;
+              }
+            }
+          }
+        }
+
         .accordion--list {
           &.content-column {
             .accordion--item {
